# 3d_graphics

./: CMakeLists.txt  README.md
bitmaps/: bitmap.cpp  bitmap.hpp  bitmapz.cpp  bitmapz.hpp  color.cpp  color.hpp  linearization.cpp  linearization.hpp  shape.cpp  shape.hpp
bitmaps/tests/: bitmap_test.cpp
matrices/: matrix.cpp  matrix.hpp
matrices/tests/: matrix_test.cpp
rationals/: Rational.cpp  Rational.hpp
rationals/tests/: rational_test.cpp
